--- a/README.Rmd
+++ b/README.Rmd
@@ -20,6 +20,8 @@ knitr::opts_chunk$set(
 
 <!-- badges: start -->
 [![Lifecycle: experimental](https://img.shields.io/badge/lifecycle-experimental-orange.svg)](https://www.tidyverse.org/lifecycle/#experimental)
+![R-CMD-check](https://github.com/como-ph/covidphinfodemic/workflows/R-CMD-check/badge.svg)
+[![CodeFactor](https://www.codefactor.io/repository/github/como-ph/covidphinfodemic/badge)](https://www.codefactor.io/repository/github/como-ph/covidphinfodemic)
 <!-- badges: end -->
 
 The COVID-19 pandemic can be characterised by the epidemiological phenomenon and transmission dynamics of this novel coronavirus causing not only significant global health consequences but also societal and economic impacts. However, a much less recognised yet equally significant phenomenon of COVID-19 infodemic characterised as the excessive amount of information about the pandemic, which makes the identification of a solution difficult and can spread misinformation, disinformation and rumours during the health emergency has been co-existing. The infodemic has hampered an effective public health response and hasa created confusion and distrust among people. We aim to document and analyse this phenomenon in the context of the Philippines.
